# goat_description

./: CMakeLists.txt  README.md  bessie.urdf  goat.urdf  package.xml
launch/: example.launch  mybot_world.launch
robots/: colors.xacro  display.launch  goat.gazebo  goat.urdf  goat.urdf.xacro
urdf/: goat.urdf
velodyne/velodyne_description/launch/: example.launch
velodyne/velodyne_description/urdf/: example.urdf.xacro
velodyne/velodyne_description/world/: example.world
world/: example.world.xacro
